
- Core:
  . Removed support for multi-line headers, as the are deprecated by RFC 7230.
    (Stas)
  . Added NULL byte protection to exec, system and passthru. (Yasuo)
  . Fixed bug #68925 (Mitigation for CVE-2015-0235 – GHOST: glibc gethostbyname
    buffer overflow). (Stas)
  . Fixed bug #67827 (broken detection of system crypt sha256/sha512 support).
    (ncopa at alpinelinux dot org)  
  
- SOAP:
  . Fixed bug #67427 (SoapServer cannot handle large messages)
    (brandt at docoloc dot de)

22 Jan 2015 PHP 5.4.37
- Core:
  . Fixed bug #68710 (Use After Free Vulnerability in PHP's unserialize()).
    (CVE-2015-0231) (Stefan Esser)

- CGI:
  . Fixed bug #68618 (out of bounds read crashes php-cgi). (CVE-2014-9427)
    (Stas)

- EXIF:
  . Fixed bug #68799: Free called on unitialized pointer. (CVE-2015-0232) 
    (Stas)

- Fileinfo:
  . Removed readelf.c and related code from libmagic sources
    (Remi, Anatol)
  . Fixed bug #68735 (fileinfo out-of-bounds memory access).
    (Anatol)

- OpenSSL:
  . Fixed bug #55618 (use case-insensitive cert name matching).
    (Daniel Lowrey)

18 Dec 2014 PHP 5.4.36

- Core:
  . Upgraded crypt_blowfish to version 1.3. (Leigh)
  . Fixed bug #68545 (NULL pointer dereference in unserialize.c). (Anatol)
  . Fixed bug #68594 (Use after free vulnerability in unserialize()).
    (CVE-2014-8142) (Stefan Esser)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)

13 Nov 2014 PHP 5.4.35

- Core:
  . Fixed bug #68365 (zend_mm_heap corrupted after memory overflow in
    zend_hash_copy). (Dmitry)

- Fileinfo:
  . Fixed bug #68283 (fileinfo: out-of-bounds read in elf note headers).
    (CVE-2014-3710) (Remi)

- GMP:
 . Fixed bug #63595 (GMP memory management conflicts with other libraries
   using GMP). (Remi)

- PDO_pgsql:
  . Fixed bug #66584 (Segmentation fault on statement deallocation) (Matteo)

16 Oct 2014, PHP 5.4.34

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Core: